# Project

./: .gitignore  CMakeLists.txt  README.md
forms/: mainwindow.ui
include/: mainwindow.h  myInteractionStyle.h
source/: dicomReader.cpp  mainwindow.cpp  markkeypoint.cpp  test2D.cpp  testMouseClick.cpp  testPickupPixel.cpp
